add doctor admin
