# modules/admin/views/doctor/create.php
@@ -1,0 +1,21 @@
+<?php
+
+use yii\helpers\Html;
+
+
+/* @var $this yii\web\View */
+/* @var $model app\models\Doctor */
+
+$this->title = '新建医生';
+$this->params['breadcrumbs'][] = ['label' => '医生', 'url' => ['index']];
+$this->params['breadcrumbs'][] = $this->title;
+?>
+<div class="doctor-create">
+
+    <h1><?= Html::encode($this->title) ?></h1>
+
+    <?= $this->render('_form', [
+        'model' => $model,
+    ]) ?>
+
+</div>
